# babeltrace

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitreview  .pre-commit-config.yaml  CONTRIBUTING.adoc  ChangeLog  Makefile.am  README.adoc  babeltrace2-2.0.6-swig-4.3.0.patch  bootstrap  configure.ac  dev-requirements.txt  pyproject.toml  setup.cfg
.reuse/: dep5
cli/: Makefile.am
common/: Makefile.am  common.c
doc/: Makefile.am
doc/man/: Makefile.am  babeltrace2-convert.1.txt  (+3 more)
include/: Makefile.am
lib/: Makefile.am
m4/: ac_extensions.m4  ae_check_sphinx.m4  ae_in_git_repo.m4  ae_lib_elfutils.m4  ae_python_modules.m4  ax_append_link_flags.m4
python-plugin-provider/: Makefile.am  python-plugin-provider.c
src/: Makefile.am
src/lib/: Makefile.am  assert-cond-base.h  assert-cond.h  error.h  func-status.h  integer-range-set.h  lib-logging.c  logging.h  object-pool.h  object.h  property.h  value.h
src/lib/graph/: component-class-sink-simple.c  component-class-sink-simple.h  component-class.h  component-descriptor-set.h  component-filter.c  component-filter.h  component-sink.c  component-sink.h  component-source.c  component-source.h  component.h  connection.h  graph.c  graph.h  interrupter.h  iterator.c  iterator.h  message-iterator-class.h  mip.c  port.h  query-executor.h
src/lib/graph/message/: discarded-items.h  event.h  message-iterator-inactivity.h  message.h  packet.h  stream.h
src/lib/plugin/: plugin-so.c  plugin-so.h  plugin.c  plugin.h
src/lib/prio-heap/: prio-heap.h
src/lib/trace-ir/: attributes.h  clock-class.c  clock-class.h  clock-snapshot.c  clock-snapshot.h  event-class.c  event-class.h  event.h  field-class.c  field-class.h  field-location.c  field-location.h  field-path.h  field-wrapper.c  field-wrapper.h  field.c  field.h  packet.h  resolve-field-path.c  resolve-field-path.h  resolve-field-xref.h  stream-class.c  stream-class.h  stream.c  stream.h  trace-class.c  trace-class.h  trace.c  trace.h  utils.h
src/plugins/: Makefile.am
src/plugins/common/muxing/: Makefile.am.inc  muxing.cpp  muxing.h  muxing.hpp
src/plugins/common/param-validation/: Makefile.am.inc  param-validation.h
src/plugins/ctf/: Makefile.am  plugin.cpp
src/plugins/ctf/common/metadata/: Makefile.am  ctf-ir.cpp  ctf-ir.hpp  ctf-meta-translate.cpp  decoder-packetized-file-stream-to-buf.c  int-range-set.hpp  int-range.hpp  parser.y  parser.ypp  visitor-generate-ir.c
src/plugins/ctf/common/src/: clk-cls-cfg.hpp  msg-iter.cpp  msg-iter.hpp  null-cp-finder.hpp  pkt-props.cpp  pkt-props.hpp
src/plugins/ctf/common/src/bfcr/: bfcr.cpp  bfcr.hpp
src/plugins/ctf/common/src/item-seq/: item-seq-iter.cpp  item-seq-iter.hpp  item-visitor.cpp  item-visitor.hpp  item.cpp  item.hpp  logging-item-visitor.cpp  logging-item-visitor.hpp  medium.cpp  medium.hpp
src/plugins/ctf/common/src/metadata/: ctf-ir.cpp  ctf-ir.hpp  metadata-stream-parser-utils.cpp  metadata-stream-parser-utils.hpp  metadata-stream-parser.cpp  metadata-stream-parser.hpp  normalize-clk-offset.cpp  normalize-clk-offset.hpp
src/plugins/ctf/common/src/metadata/json/: ctf-2-fc-builder.cpp  ctf-2-fc-builder.hpp  ctf-2-metadata-stream-parser.cpp  ctf-2-metadata-stream-parser.hpp  fcs-with-role.cpp  fcs-with-role.hpp  key-fc-types.cpp  key-fc-types.hpp  normalize-field-locs.cpp  normalize-field-locs.hpp  resolve-fcs-with-int-sel.cpp  resolve-fcs-with-int-sel.hpp  strings.cpp  strings.hpp  utils.cpp  utils.hpp  val-req.cpp  val-req.hpp  validate-scope-fc-roles.cpp  validate-scope-fc-roles.hpp
src/plugins/ctf/common/src/metadata/tsdl/: ast.hpp  ctf-1-metadata-stream-parser.cpp  ctf-1-metadata-stream-parser.hpp  ctf-meta-configure-ir-trace.cpp  ctf-meta-configure-ir-trace.hpp  ctf-meta-resolve.cpp  ctf-meta-translate.cpp  ctf-meta-update-default-clock-classes.cpp  ctf-meta-validate.cpp  ctf-meta-visitors.hpp  ctf-meta-warn-meaningless-header-fields.cpp  ctf-meta.hpp  decoder-packetized-file-stream-to-buf.cpp  decoder-packetized-file-stream-to-buf.hpp  decoder.cpp  decoder.hpp  lexer.lpp  logging.hpp  metadata-stream-decoder.cpp  metadata-stream-decoder.hpp  objstack.cpp  objstack.hpp  parser-wrap.hpp  parser.ypp  scanner-symbols.hpp  scanner.hpp  visitor-generate-ir.cpp  visitor-parent-links.cpp  visitor-semantic-validator.cpp
src/plugins/ctf/common/src/msg-iter/: msg-iter.cpp  msg-iter.hpp
src/plugins/ctf/fs-sink/: fs-sink-ctf-meta.h  fs-sink-ctf-meta.hpp  fs-sink-stream.c  fs-sink-stream.cpp  fs-sink-stream.hpp  fs-sink-trace.cpp  fs-sink-trace.hpp  fs-sink.cpp  fs-sink.hpp  translate-ctf-ir-to-tsdl.c  translate-ctf-ir-to-tsdl.cpp  translate-ctf-ir-to-tsdl.hpp  translate-trace-ir-to-ctf-ir.cpp  translate-trace-ir-to-ctf-ir.hpp
src/plugins/ctf/fs-src/: data-stream-file.c  data-stream-file.cpp  data-stream-file.hpp  file.cpp  file.hpp  fs.c  fs.cpp  fs.hpp  lttng-index.hpp  metadata.cpp  metadata.hpp  query.cpp  query.hpp
src/plugins/ctf/lttng-live/: data-stream.cpp  data-stream.hpp  lttng-live.cpp  lttng-live.hpp  lttng-viewer-abi.hpp  metadata.cpp  metadata.hpp  viewer-connection.c  viewer-connection.cpp  viewer-connection.hpp
src/plugins/lttng-utils/: Makefile.am
src/plugins/lttng-utils/debug-info/: Makefile.am  bin-info.h  crc32.h  debug-info.h  dwarf.h  trace-ir-data-copy.h  trace-ir-mapping.h  trace-ir-metadata-copy.h  trace-ir-metadata-field-class-copy.h  utils.h
src/plugins/text/: Makefile.am  plugin.c
src/plugins/text/details/: details.c  details.h  write.c
src/plugins/text/dmesg/: dmesg.c  dmesg.h
src/plugins/text/pretty/: pretty.c  pretty.h  print.c
src/plugins/utils/: Makefile.am  plugin.cpp
src/plugins/utils/counter/: counter.c  counter.h
src/plugins/utils/dummy/: dummy.c  dummy.h
src/plugins/utils/muxer/: comp.cpp  comp.hpp  msg-iter.cpp  msg-iter.hpp  muxer.c  upstream-msg-iter.cpp  upstream-msg-iter.hpp
src/plugins/utils/trimmer/: trimmer.c  trimmer.h
tests/: Makefile.am
tests/plugins/flt.lttng-utils.debug-info/: Makefile.am  test-dwarf.c  test-succeed.sh
tools/: check-include-guard.py  check-include-guards.sh  format-cpp.sh
version/: README.adoc
(+351 files in other folders)
